--- a/project/vkumar/Rahohealthy/src/main/resources/messages_en.properties
+++ b/project/vkumar/Rahohealthy/src/main/resources/messages_en.properties
@@ -4,5 +4,5 @@ student.firstname=First name
 student.lastname=Last name
 student.yearLevel=Year Level
 
-user.logged=Logged in as
-user.logout=Logout
+merchantdetails.logged=Logged in as
+merchantdetails.logout=Logout
