Vimal - Add product
Product Add Done

--- a/project/vkumar/Rahohealthy/src/main/resources/messages_en.properties
+++ b/project/vkumar/Rahohealthy/src/main/resources/messages_en.properties
@@ -1,8 +1,11 @@
-student.title=Student List
-student.id=Student ID
-student.firstname=First name
-student.lastname=Last name
-student.yearLevel=Year Level
+productdetails.product_categoryid=Enter Product Category Id:
+productdetails.product_subcategoryid=Enter Product SubCategory Id:
+productdetails.product_name=Enter Product Name:
+productdetails.product_price=Enter Product Price:
+productdetails.prodcut_qty=Enter Product Quantity:
+productdetails.product_desc=Enter Product Description:
+productdetails.merchant_id=Enter Merchant Id:
+productdetails.brand_name=Enter Brand Name:
 
 merchantdetails.logged=Logged in as
 merchantdetails.logout=Logout
